testsuite/tests/typecheck/should_fail/T5684c.stderr

T5684c.hs:12:12: error:
    • No instance for (B Char b0) arising from a use of ‘op’
    • In the expression: op 'c' undefined
      In the expression:
        [op 'c' undefined, op True undefined, op False False]
      In an equation for ‘flop3’:
          flop3 = [op 'c' undefined, op True undefined, op False False]

T5684c.hs:13:12: error:
    • No instance for (A Bool) arising from a use of ‘op’
    • In the expression: op True undefined
      In the expression:
        [op 'c' undefined, op True undefined, op False False]
      In an equation for ‘flop3’:
          flop3 = [op 'c' undefined, op True undefined, op False False]
